--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-mandelbrot.min.js
+# NodeJS
+node_modules/
+bower_components/
+
+# Junk
+yarn.lock
+*.log
+
+# editor
+.vscode/
+.idea/
+*.iml
+
+# Build
+target/
+out/
+build/
+dist/
+
+# OSX
+.DS_Store
+
+# linters
+.eslintrc.json
+.sass-lint.yml
